--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -14,6 +14,7 @@ editor_options:
 
 ```{r setup, include=FALSE}
 renv::restore()
+library(fdrtool) # to sample from halfnormal function
 library(mapview)
 library(INLA)
 library(inlatools)
@@ -2823,6 +2824,28 @@ We maken een model voor de probabiliteit dat een Gele kwikstaart wordt gedetecte
 $$
 p = \int_0^w\frac{2r}{w^2}g(r;\boldsymbol \theta)\,dr
 $$
+
+$p$ is dus de oppervlakte onder de detectiecurve. De volgende figuur toont een fictief voorbeeld van een histogram met afstanden van 0 tot 300 meter ($w = 300$). Het is duidelijk dat de er op grotere afstand minder waarnemingen zijn. Moest dit niet het geval zijn zouden de afstanden uniform verdeeld zijn als de blauwe box. Alles zou gezien zijn en $p = 1$. Dit is hier dus niet het geval. De rode curve is een half-normale detectiecurve gefit op de data. De oppervlakte onder de curve is de gemiddelde detectiekans (de geschatte fractie dieren die gezien zijn). De oppervlakte boven de curve de geschatte fractie dieren die gemist zijn. Als we de gemiddelde detectiekans weten, kunnen we dus eenvoudig berekenen hoeveel dieren we verwachten als we uitgaan van een uniforme verdeling van dieren over het telpunt. We controleren er dus voor dat het moeilijker is om dieren te detecteren op grote afstand terwijl we er van uitgaan dat er even veel zittenop grote als op kleine afstand.
+
+```{r}
+set.seed(20221121)
+tibble(distances = rhalfnorm(500, theta = sqrt(pi/2) / 100)) %>%
+  filter(distances <= 300) %>%
+  ggplot(aes(x = distances)) +
+    geom_rect(aes(xmin = 0, xmax = 300, ymin = 0, 
+                  ymax = dhalfnorm(0, theta = sqrt(pi/2) / 100)), 
+                  colour = "blue", size = 1, fill = "aliceblue", alpha = 0.05) +
+    geom_histogram(aes(y = ..density..), breaks = seq(0, 300, by = 25), 
+                   fill = "white", colour = "black") +
+    stat_function(data = tibble(distances = 
+                                rhalfnorm(500, theta = sqrt(pi/2) / 100)),
+                  aes(x =  distances), fun = dhalfnorm, n = 1000, 
+                  args = list(theta = sqrt(pi/2) / 100), colour = "red", 
+                  size = 1) +
+    geom_rect(aes(xmin = 0, xmax = 300, ymin = 0, ymax = 0.007978846), 
+              colour = "blue", size = 1, fill = alpha("white", 0)) +
+    labs(x = "Afstand (m)")
+```
 
 We gaan opnieuw tewerk zoals in subsectie \@ref(Distance). We fitten 3 verschillende detectiefuncties die we laten afhangen van covariaten regio, sbp en openheid. De detectiekans word dan berekend conditioneel aan de waargenomen waarden van de covariaten.
 
